--- a/Портфолио.md
+++ b/Портфолио.md
@@ -6,7 +6,7 @@
 ### 1. Мобильное приложение Stets Home для умного дома
 **Суть:** Комплексный проект по разработке приложения для управления инновационными умными устройствами (с функцией энергосбережения) и интеграции с другими гаджетами.
 **Артефакты:** Use Case, DFD, ER-диаграммы, словарь данных, карта пользовательских историй, интерактивный прототип в Figma, ПМИ, видео-защита.
-**Репозиторий с деталями:** [https://github.com/AnastasyaYakebenko/Smart_Home_Control_App/blob/main/Описание%20проекта%20и%20выполненные%20задачи.md) 
+**Репозиторий с деталями:** [Мобильное приложение Умныйм дом] (https://github.com/AnastasyaYakebenko/Smart_Home_Control_App/blob/main/Описание%20проекта%20и%20выполненные%20задачи.md) 
 
 ### 2. Моделирование процессов сети клиник
 **Суть:** Автоматизация записи пациентов в медклинике. Анализ AS-IS и проектирование TO-BE процессов.
