--- a/Портфолио.md
+++ b/Портфолио.md
@@ -6,17 +6,17 @@
 ### 1. Мобильное приложение Stets Home для умного дома
 **Суть:** Комплексный проект по разработке приложения для управления инновационными умными устройствами (с функцией энергосбережения) и интеграции с другими гаджетами.
 **Артефакты:** Use Case, DFD, ER-диаграммы, словарь данных, карта пользовательских историй, интерактивный прототип в Figma, ПМИ, видео-защита.
-**Репозиторий с деталями:** [Мобильное приложение Умныйм дом] (https://github.com/AnastasyaYakebenko/Smart_Home_Control_App/blob/main/Описание%20проекта%20и%20выполненные%20задачи.md) 
+**Репозиторий с деталями:** [Мобильное приложение "Умный дом"](https://github.com/AnastasyaYakebenko/Smart_Home_Control_App/blob/main/Описание%20проекта%20и%20выполненные%20задачи.md)
 
 ### 2. Моделирование процессов сети клиник
 **Суть:** Автоматизация записи пациентов в медклинике. Анализ AS-IS и проектирование TO-BE процессов.
 **Артефакты:** BPMN диаграммы, UML State Machine, User Story Mapping, Data Flow Diagram, интерактивный прототип, сценарии Use Case в Figma.
-**Репозиторий с деталями:** [Проект "Клиника"](https://github.com/AnastasyaYakebenko/Process_modeling/blob/main/Описание.md) 
+**Репозиторий с деталями:** [Проект "Клиника"](https://github.com/AnastasyaYakebenko/Process_modeling/blob/main/Описание.md)
 
 ### 3. Проектирование интернет-магазина
 **Суть:** Разработка требований и моделирование данных для сайта интернет-магазина.
 **Артефакты:** Use Case диаграммы, логические ER-диаграммы в нотациях Чена и Crow's Foot, нормализация данных до 3НФ.
-**Репозиторий с деталями:** [Проект "Интернет-магазин"](https://github.com/AnastasyaYakebenko/Website_Data_Modeling_Project/blob/main/Описание%20работы%20на%20проектеmd) 
+**Репозиторий с деталями:** [Проект "Интернет-магазин"](https://github.com/AnastasyaYakebenko/Website_Data_Modeling_Project/blob/main/Описание%20работы%20на%20проекте.md)
 
 ### 4. Новый функционал для приложения изучения языков
 **Суть:** Расширение приложения модулем "Карточки для запоминания слов" с видео-контекстом.
